# fileRAG

./: .gitignore  Makefile  README.md  requirements.txt  run_tests.py  setup_env.sh
backend/: Makefile  README.md  pyproject.toml  requirements.txt
backend/src/: api.py  chunker.py  crawler.py  db.py  embeddings.py  multi_query_search.py  pipeline.py  query_generator.py  test_db.py
backend/src/parsers/: __init__.py  docx_parser.py  image_parser.py  md_parser.py  pdf_parser.py  txt_parser.py
backend/tests/: __init__.py  add_sample_data.py  integration_test_chunker.py  integration_test_embeddings.py  requirements-test.txt  test_api_integration.py  test_chunker.py  test_crawler.py  test_embeddings.py  test_fallback.py  test_multi_query.py  test_openai.py  test_parsers.py  test_query_generator.py
backend/tests/test_data/: .hidden_file.txt  chunker_test_document.txt  large_file.txt  sample.txt
backend/tests/test_data/subdirectory/: nested_file.txt
frontend/: README.md  index.html  main.js  package-lock.json  package.json  renderer.js
src/: __init__.py  api.py  chunker.py  crawler.py  embeddings.py  pipeline.py
src/parsers/: docx_parser.py  image_parser.py  md_parser.py  pdf_parser.py  txt_parser.py
tests/: test_parsers.py
tests/sample_files/: sample.md  sample.txt
tests/test_data/: sample.md  unsupported.xyz
